--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 body {
   background: #f5f5f5;
   font-weight: 400;
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
 #topbar {
   background: #f8f8f8;
